--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,17 +1,204 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Food AI Verification System</title>
+  <meta charset="UTF-8" />
 
-<select id="languageSwitcher">
-  <option value="en">English</option>
-  <option value="hi">Hindi</option>
-  <option value="de">German</option>
-  <option value="fr">French</option>
-  <option value="es">Spanish</option>
-  <option value="ur">Urdu</option>
-  <option value="ar">Arabic</option>
-  <option value="zh">Chinese</option>
-  <option value="ja">Japanese</option>
-  <option value="pt">Portuguese</option>
-</select>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      background-color: #f4f6f9;
+    }
 
-<table id="foodTable"></table>
+    header {
+      background-color: #1e293b;
+      color: white;
+      padding: 20px;
+      text-align: center;
+      font-size: 24px;
+      font-weight: bold;
+    }
+
+    .container {
+      padding: 20px;
+    }
+
+    .top-bar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 20px;
+      flex-wrap: wrap;
+      gap: 10px;
+    }
+
+    .actions {
+      display: flex;
+      gap: 10px;
+      flex-wrap: wrap;
+    }
+
+    select {
+      padding: 6px;
+      border-radius: 4px;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      background: white;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+    }
+
+    th, td {
+      padding: 12px;
+      border-bottom: 1px solid #ddd;
+      text-align: left;
+      vertical-align: top;
+      word-wrap: break-word;
+      max-width: 300px;
+    }
+
+    th {
+      background-color: #f1f5f9;
+    }
+
+    img {
+      border-radius: 8px;
+      width: 120px;
+      height: auto;
+    }
+
+    .image-wrapper {
+      position: relative;
+      display: inline-block;
+    }
+
+    .image-wrapper img {
+      width: 160px;
+      border-radius: 8px;
+      display: block;
+    }
+
+    .slider-btn {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      background: rgba(0,0,0,0.6);
+      color: white;
+      border: none;
+      width: 35px;
+      height: 35px;
+      border-radius: 50%;
+      cursor: pointer;
+      font-size: 18px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: 0.2s;
+    }
+
+    .slider-btn:hover {
+      background: rgba(0,0,0,0.85);
+    }
+
+    .slider-left {
+      left: 5px;
+    }
+
+    .slider-right {
+      right: 5px;
+    }
+
+
+    button {
+      padding: 6px 12px;
+      background-color: #2563eb;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 14px;
+    }
+
+    button:disabled {
+      background-color: #94a3b8;
+      cursor: not-allowed;
+    }
+
+    button:hover:not(:disabled) {
+      background-color: #1d4ed8;
+    }
+
+    .pass {
+      color: green;
+      font-weight: bold;
+    }
+
+    .fail {
+      color: red;
+      font-weight: bold;
+    }
+
+    .human {
+      color: orange;
+      font-weight: bold;
+    }
+
+  </style>
+</head>
+
+<body>
+
+<header>
+  🍽 Food AI Verification System
+</header>
+
+<div class="container">
+
+  <div class="top-bar">
+
+    <div class="actions">
+      <button id="analyzeSelectedBtn" disabled>Analyze Selected</button>
+      <button id="analyzeAllBtn">Analyze All</button>
+    </div>
+
+    <!-- 🌍 ALL REQUIRED LANGUAGES -->
+    <select id="languageSwitcher">
+      <option value="en">English</option>
+      <option value="hi">Hindi</option>
+      <option value="de">German</option>
+      <option value="fr">French</option>
+      <option value="es">Spanish</option>
+      <option value="ur">Urdu</option>
+      <option value="ar">Arabic</option>
+      <option value="zh">Chinese</option>
+      <option value="ja">Japanese</option>
+      <option value="pt">Portuguese</option>
+    </select>
+
+  </div>
+
+  <table>
+    <thead>
+      <tr>
+        <th>Select</th>
+        <th>Images</th>
+        <th>Name</th>
+        <th>Description</th>
+        <th>Type</th>
+        <th>Result</th>
+        <th>Human Review</th>
+      </tr>
+    </thead>
+
+    <tbody id="foodTable"></tbody>
+  </table>
+
+</div>
 
 <script src="js/app.js"></script>
+
+</body>
+</html>
